baseline/networkpolicy-ns-09-allow-kube-dns-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-ns-09-allow-kube-dns-egress
  namespace: ns-09
spec:
  podSelector: {}  # all pods
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
  policyTypes:
  - Egress
